/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package vehiclesfactory;

/**
 *
 * @author anna
 */
/**
 * VehicleTypes enum.
 * 
 * @author Binu George
 * @since 2013
 * @version 1.0
 */
public enum VehicleTypes {
	Car,Truck
}