@startuml

title __VEHICLESFACTORY's Class Diagram__\n

  package vehiclesfactory {
    class Car {
    }
  }
  

  package vehiclesfactory {
    class TestDrive {
    }
  }
  

  package vehiclesfactory {
    class Truck {
    }
  }
  

  package vehiclesfactory {
    interface Vehicle {
    }
  }
  

  package vehiclesfactory {
    enum VehicleFactory {
    }
  }
  

  package vehiclesfactory {
    enum VehicleTypes {
    }
  }
  

  Car -up-|> Vehicle
  Truck -up-|> Vehicle
TestDrive -down->VehicleTypes
TestDrive -> VehicleFactory
VehicleFactory -> Vehicle

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
